# Template-Raylib-C

./: CMakeLists.txt  README.md
includes/: game.h
sources/: main.c
